--- a/src/main/resources/templates/layouts/Master/itemOpening.html
+++ b/src/main/resources/templates/layouts/Master/itemOpening.html
@@ -120,27 +120,27 @@
 													<div class="form-group col-md-6">
 														<label class="form-label">Item Type</label> <input
 															type="text" class="form-control" placeholder="Item Type"
-															title="item type" id="itemType">
+															title="item type" id="itemType" readonly>
 													</div>
 
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Category</label> <input
 															type="text" class="form-control" placeholder="Category"
-															title="category" id="category">
+															title="category" id="category" readonly>
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Item UOM</label> <input
 															type="text" class="form-control" placeholder="Item UOM"
-															title="item uom" id="itemUom">
+															title="item uom" id="itemUom" readonly>
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Opening Date</label><span
 															style="color: red">*</span> <input type="date"
 															class="form-control" th:field="*{openingDate}"
-															title="opening date">
+															title="opening date" id="openingDate">
 													</div>
 
 
@@ -202,6 +202,18 @@
 	</div>
 
 	<div th:replace="fragments/footer :: footer">...</div>
+
+
+<script>
+		$(document).ready(function() {
+
+			document.getElementById('openingDate').valueAsDate = new Date();
+
+		});
+	</script>
+
+
+
 
 	<script>
 	
