code commit@Rahul
validation on gate entry

--- a/src/main/resources/templates/layouts/Master/purchaseOrder.html
+++ b/src/main/resources/templates/layouts/Master/purchaseOrder.html
@@ -1306,7 +1306,7 @@
 													openPoFun()
 												}
 												
-												var tempValue = document.getElementByid("totalCost").value;
+												//var tempValue = document.getElementByid("totalCost").value;
 												
 
 												j++;
