--- a/src/main/resources/templates/layouts/Master/gateEntry.html
+++ b/src/main/resources/templates/layouts/Master/gateEntry.html
@@ -246,11 +246,22 @@
 													<h5>Item Details</h5>
 													<div class="box-body">
 
+
+														<div class="col-sm-12" style="text-align: right">
+
+															<a id="add_row" class="fa fa-plus" aria-hidden="true"
+																style="font-size: 24px; color: #001080"></a>&nbsp;&nbsp;&nbsp;
+															<a id='delete_row' class="fa fa-trash"
+																style="font-size: 24px; color: #399490fc"
+																aria-hidden="true"></a>
+														</div>
+
+
 														<input id="_cr" name="_cr" type="hidden" value="1">
 
 
 
-														<div class="table-responsive">
+														<div class="table-responsive" style="margin-top: 40px">
 															<table id="example" aria-describedby="example"
 																class="table table-striped display">
 																<thead>
@@ -262,7 +273,8 @@
 																		<th scope="col" class="text-center"
 																			style="width: 90px;">Date</th>
 																		<th scope="col" class="text-center"
-																			style="width: 90px;">Item Code<span style="color:red">*</span></th>
+																			style="width: 90px;">Item Code<span
+																			style="color: red">*</span></th>
 																		<th scope="col" class="text-center"
 																			style="width: 90px;">Item Description</th>
 																		<th scope="col" class="text-center"
@@ -286,8 +298,8 @@
 																		<!--   po number  -->
 
 																		<td><select
-																			class="form-control indentContainer form-control-sm select"
-																			id="orderIndentNumberPo"
+																			class="form-control poContainer0 form-control-sm select"
+																			id="orderIndentNumberPo0"
 																			name="gateEntryItemDetails[0].purchaseOrder"
 																			title="indent number"
 																			onchange='getOrderIndentDetailPo()' required>
@@ -305,8 +317,8 @@
 
 																		<!-- item code  -->
 
-																		<td><select id="orderItemPo"
-																			class="form-control form-control-sm select orderItemContainerPo"
+																		<td><select id="orderItemPo0"
+																			class="form-control form-control-sm select orderItemContainerPo0"
 																			required title="item"
 																			onchange="getOrderItemDetailForPo()"
 																			name="gateEntryItemDetails[0].item">
@@ -318,7 +330,8 @@
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="orderItemCode0" title="item description"
-																			name="gateEntryItemDetails[0].itemDescription" readonly></td>
+																			name="gateEntryItemDetails[0].itemDescription"
+																			readonly></td>
 
 																		<!-- pending qty  -->
 
@@ -336,7 +349,7 @@
 
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="orderItemuom" title="status"
+																			id="orderItemuom0" title="status"
 																			name="gateEntryItemDetails[0].uom"></td>
 
 																		<!-- incoming part sr no  -->
@@ -411,6 +424,222 @@
 			document.getElementById('gateEntryDate').valueAsDate = new Date();
 
 		});
+
+		function getPoList() {
+
+			console.log("get po list ")
+			$
+					.ajax({
+						type : "GET",
+						url : "approved/polist",
+
+						success : function(data) {
+							console.log("list of get approved po  : " + data)
+
+							//$("#supplierState").val(data.supplierState)
+							//$("#uomCode").val(data.uom.uomCode);
+
+							var options = '<option value=""><strong>Select Indent</strong></option>';
+							$(data)
+									.each(
+											function(index, value) {
+
+												console.log("data in loop : ")
+												console.log("data in loop : "
+														+ value.poNumber)
+
+												options += '<option value="' + value.poNumber + '">'
+														+ value.poNumber
+														+ '</option>';
+
+											});
+
+							console.log(" id index value is :" + idIndex)
+							$('.poContainer' +idIndex).html(options);
+
+						},
+						error : function() {
+							console.log("Error");
+						}
+					});
+		}
+
+		function getOrderIndentDetailPo() {
+
+			console.log(" getOrderIndentDetailPo fun ")
+			// this po 
+			var indentNumber = document.getElementById("orderIndentNumberPo"+idIndex).value;
+			console.log("order indent number is : " + indentNumber)
+
+			$.ajax({
+				type : "GET",
+				url : "indentdetailinpo/" + indentNumber,
+
+				success : function(data) {
+					console.log("order indent response  : " + data)
+
+					console.log("order indent date   : "
+							+ convertDate(data.poDate))
+					console.log("order indent date   : " + data.poDate)
+
+					$("#orderIndentDatePo" + idIndex).val(data.poDate)
+					//$("#empName").val(data.employee.empName);
+					//$("#empCode").val(data.employee.empCode);
+
+					getOrderItemList(indentNumber);
+
+					//item trave
+
+				},
+				error : function() {
+					console.log("Error");
+				}
+			});
+		}
+
+		function convertDate(inputFormat) {
+			function pad(s) {
+				return (s < 10) ? '0' + s : s;
+			}
+			var d = new Date(inputFormat)
+			return [ pad(d.getDate()), pad(d.getMonth() + 1), d.getFullYear() ]
+					.join('/')
+		}
+
+		function getOrderItemList(poNumber) {
+
+			//Get Item lIst in purchase order item detail using po number (FK)
+
+			console.log("get Item List Function is : " + poNumber)
+
+			$
+					.ajax({
+						type : "GET",
+						url : "itemList/" + poNumber,
+
+						success : function(data) {
+							console.log("Item Info behalf of Indent Number  : "
+									+ data)
+
+							var options = '<option value=""><strong>Select Item</strong></option>';
+							$(data)
+									.each(
+											function(index, value) {
+
+												console.log("item info : "
+														+ value.item.itemCode)
+												console
+														.log("item info : "
+																+ value.item.description)
+
+												options += '<option value="' + value.item.itemCode + '">'
+														+ value.item.description
+														+ '</option>';
+
+											});
+
+							$('.orderItemContainerPo'+idIndex).html(options);
+
+						},
+						error : function() {
+							console.log("Error");
+						}
+					});
+		}
+
+		function getOrderItemDetailForPo() {
+
+			var itemNumber = document.getElementById("orderItemPo"+idIndex).value;
+			var poNumber = document.getElementById("orderIndentNumberPo"+idIndex).value;
+
+			$.ajax({
+				type : "GET",
+				url : "itemInfo/" + itemNumber + "/" + poNumber,
+
+				success : function(data) {
+
+					console.log("getOrderItemDetailForPo item description  :"
+							+ data.description)
+					$("#orderItemCode"+idIndex).val(data.item.description)
+					//orderItemCode0
+					//$("#orderItemCode0").val(data.itemCode)
+					$("#orderItemuom"+idIndex).val(data.item.uom.uomCode)
+					$("#qtyOrder"+idIndex).val(data.purchaseOrderItem.qtyOrder)  
+
+				},
+				error : function() {
+					console.log("Error");
+				}
+			});
+
+		}
+	</script>
+
+
+
+
+	<script>
+		var idIndex = 0;
+		$(document)
+				.ready(
+						function() {
+							console.log("gate  entry detail block  is ready!");
+							var i = 1;
+							$('#add_row')
+									.click(
+											function() {
+												idIndex++;
+												$('#addr' + i)
+														.html(
+
+																/*  po number */
+
+																"<td><select class='form-control poContainer" + i+ "  form-control-sm select'  id='orderIndentNumberPo" + i+ "'  name='gateEntryItemDetails["+ i+ "].purchaseOrder' title='indent number' onchange='getOrderIndentDetailPo()' required></select></td>"
+
+																		/*  po date */
+																		+ "<td><input type='date' class='form-control form-control-sm'  id='orderIndentDatePo" + i+ "' title='order date'name='gateEntryItemDetails["+i+"].orderDate' readonly></td>"
+
+																		/*  item code */
+																		+ "<td><select id='orderItemPo"+i+"' class='form-control form-control-sm select orderItemContainerPo"+i+"' required title='item' onchange='getOrderItemDetailForPo()' name='gateEntryItemDetails["+ i+ "].item'><option value=''>Select</option></select></td>"
+
+																		/* item description  */ 
+																		+ "<td><input type='text'class='form-control form-control-sm'id='orderItemCode"+i+"' title='item description'name='gateEntryItemDetails["+i+"].itemDescription'readonly></td>"
+
+																		/*  pending qty */
+																		+ "<td><input type='number' title='pending qty'class='form-control form-control-sm'name='gateEntryItemDetails["+i+"].pendingQty'></td>"
+
+																		/*  qty */
+																		+ "<td><input type='number' id='qtyOrder"+i+"' class='form-control form-control-sm' title='net qty'name='gateEntryItemDetails["+i+"].netQty'></td>"
+
+																		/*  uom*/
+																		+ "<td><input type='text'class='form-control form-control-sm'id='orderItemuom"+i+"' title='status'name='gateEntryItemDetails["+i+"].uom'></td>"
+
+																		/* incoming part sr no  */
+																		+ "<td><input type='text'class='form-control form-control-sm' id='' title=''></td>"
+
+																		+ "<td><input type='text'class='form-control form-control-sm'id='technicalQualification' title=''></td>");
+
+												$('#example').append(
+														'<tr id="addr'
+																+ (i + 1)
+																+ '"></tr>');
+
+												i++;
+
+												getPoList()
+
+											});
+
+							$("#delete_row").click(function() {
+								if (i > 1) {
+									$("#addr" + (i - 1)).html('');
+									$('#_cr').val(i - 1);
+									i--;
+									idIndex--;
+								}
+							});
+
+						});
 	</script>
 
 
