--- a/src/main/resources/templates/layouts/Master/purchaseOrder.html
+++ b/src/main/resources/templates/layouts/Master/purchaseOrder.html
@@ -126,7 +126,7 @@
 															<div class="form-group col-md-3">
 																<label class="form-label">GST</label> <label
 																	style="color: red">*</label> <select
-																	class="form-control" id="" title="gst" required>
+																	class="form-control" id="" title="gst" th:field="*{gst}" required>
 																	<option value="G" selected>GST</option>
 																	<option value="N">Non-GST</option>
 
