--- a/src/main/resources/templates/layouts/Master/mrn.html
+++ b/src/main/resources/templates/layouts/Master/mrn.html
@@ -362,7 +362,7 @@ iframe {
 																		<!-- item code -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="orderIndentDatePo" title="order date"
+																			id="itemCode0" title="order date"
 																			name="mrnDetails[0].item" readonly></td>
 
 																		<!-- item name -->
@@ -768,7 +768,7 @@ iframe {
 			var gateEntryCode = document.getElementById("gateEntryNumber").value;
 			
 			
-			
+			document.getElementById("itemCode"+idIndex).value = itemCode;
 			
 			
 			$.ajax({
@@ -892,7 +892,7 @@ iframe {
 																"<td><select class='form-control indentContainer form-control-sm select' id='orderIndentNumberPo' name='mrnDetails["+j+"].matServType' title='indent number'><option value='M'>Material</option><option value='S'>S</option></select></td>'"
 
 																		/*  indent code   */
-																		+ "<td><input type='text'class='form-control form-control-sm' id='orderIndentDatePo' "+j+" title='order date' name='mrnDetails["+j+"].item' readonly></td>"
+																		+ "<td><input type='text'class='form-control form-control-sm'  id='itemCode"+j+"' title='order date' name='mrnDetails["+j+"].item' readonly></td>"
 
 																		/*  item name  */
 																		+ "<td><select type='text' class='form-control  form-control-sm select itemContainer"+j+"' id='item"+j+"' title='item name' onchange='getItemInfo()'>"
