code commit@Rahul
save functionality of mrm form

--- a/src/main/resources/templates/layouts/editview/editMrn.html
+++ b/src/main/resources/templates/layouts/editview/editMrn.html
@@ -642,7 +642,7 @@ iframe {
 										<!-- /.box -->
 										<div
 											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/mrn/list}">View All MRN</a>
+											<a th:href="@{/gateentry/list}">View All Gate-Entry</a>
 										</div>
 									</div>
 
