--- a/src/main/resources/templates/layouts/Master/materialRequisition.html
+++ b/src/main/resources/templates/layouts/Master/materialRequisition.html
@@ -106,12 +106,13 @@
 															<label for="inputEmail4">Requisition No</label> <input
 																type="text" class="form-control" id="inputEmail4"
 																placeholder="Requisition No" th:field="*{requisitionNo}"
-																title="requisition no">
+																title="requisition no" readonly>
 														</div>
 														<div class="form-group col-md-4">
 															<label for="inputPassword4">Requisition Date</label> <input
-																type="date" class="form-control" id="gateEntryDate"
-																title="requisition date" th:field="*{requisitionDate}">
+																type="date" class="form-control" id="requisitionDate"
+																title="requisition date" th:field="*{requisitionDate}"
+																readonly>
 														</div>
 
 
@@ -182,6 +183,7 @@
 																class="form-control" id="departmentDropdown"
 																title="work center name">
 																<option value="">Select</option>
+																<option value="t">text</option>
 																<!-- <option th:each="department :  ${departmentList}"
 																	th:text="${department.deptName}"
 																	th:value=" ${department.deptCode}"></option> -->
@@ -190,18 +192,19 @@
 
 														<div class="form-group col-md-4">
 															<label for="inputAddress">Store Code</label> <input
-																type="text" class="form-control" id="gateEntryDate"
+																type="text" class="form-control" id="storeCode"
 																title="store code" readonly>
 														</div>
 
 
 														<div class="form-group col-md-4">
 															<label for="inputPassword4">Store Name</label> <select
-																class="form-control" id="departmentDropdown"
-																title="store name" th:field="*{store}">
+																class="form-control" id="storeName"
+																onchange='selectStore()' title="store name"
+																th:field="*{store}">
 																<option value="">Select</option>
 																<option th:each="store :  ${storeList}"
-																	th:text="${store.storeStatus}"
+																	th:text="${store.description}"
 																	th:value=" ${store.storeCode}"></option>
 															</select>
 														</div>
@@ -241,8 +244,8 @@
 																	<tr>
 
 
-																		<th scope="col" class="text-center"
-																			style="width: 50px;">S.No</th>
+																		<!-- <th scope="col" class="text-center"
+																			style="width: 50px;">S.No</th> -->
 																		<th scope="col" class="text-center"
 																			style="width: 90px;">Item Code</th>
 																		<th scope="col" class="text-center"
@@ -271,37 +274,36 @@
 																	<tr id="adr0">
 
 
-																		<td><input type="number" title="sno."
+																		<!-- <td><input type="number" title="sno."
 																			class="form-control form-control-sm"
 																			style="width: 70px;"
-																			name="materialRequisitionDetails[0].srNo"></td>
+																			name="materialRequisitionDetails[0].srNo"></td> -->
 
 
-																		<td><select
-																			class="form-control indentContainer form-control-sm select"
-																			id="orderIndentNumberPo"
-																			name="materialRequisitionDetails[0].item"
-																			title="item" onchange='getOrderIndentDetailPo()'
-																			required>
-																				<option value="">Select Indent</option>
-																				<option th:each="po :  ${listPO}"
-																					th:text="${po.poNumber}" th:value=" ${po.poNumber}"></option>
+																		<td><input type="text"
+																			class="form-control form-control-sm" id="itemCode0"
+																			title="item description" readonly></td>
 
+																		<td><select id="itemName0"
+																			class="form-control form-control-sm select itemContainer0"
+																			required title="item"
+																			onchange="selectItem()"
+																			name="materialRequisitionDetails[0].item">
+																				<option value="">Select</option>
+																				<option th:each="item :  ${itemList}"
+																					th:text="${item.description}"
+																					th:value=" ${item.itemCode}"></option>
 																		</select></td>
 
-																		<td><input type="text"
-																			class="form-control form-control-sm"
-																			style="width: 170px;" id="orderItemDescription"
-																			title="description"></td>
 
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="orderItemDescription" title="uom"></td>
+																			id="uom0" title="uom" name='materialRequisitionDetails[0].uom' readonly></td>
 
 																		<td><input type="number" title="qty"
 																			class="form-control form-control-sm"
-																			style="width: 70px;"
-																			name="materialRequisitionDetails[0].qty"></td>
+																			style="width: 70px;" id='qty0'
+																			name="materialRequisitionDetails[0].qty" step="0.25" readonly></td>
 
 																		<td><input type="number"
 																			class="form-control form-control-sm" title="net qty"
@@ -368,6 +370,15 @@
 	</div>
 	<div th:replace="fragments/footer :: footer">...</div>
 
+	<script>
+		$(document)
+				.ready(
+						function() {
+
+							document.getElementById('requisitionDate').valueAsDate = new Date();
+
+						});
+	</script>
 
 	<script>
 		function selectEmployee() {
@@ -394,11 +405,36 @@
 				}
 			});
 		}
-		$(document).ready(function() {
 
-			document.getElementById('gateEntryDate').valueAsDate = new Date();
+		function selectStore() {
+			console.log("store code")
+			var storeCode = document.getElementById("storeName").value;
+			console.log("store code" + storeCode)
+			document.getElementById("storeCode").value = storeCode;
+		}
+		
+		function selectItem(){
+			var itemNumber = document.getElementById("itemName0").value;
+			document.getElementById("itemCode0").value = itemNumber;
+			
 
-		});
+			$.ajax({
+				type : "GET",
+				url : "itemInfo/" + itemNumber ,
+
+				success : function(data) {
+
+					console.log("item description  :"+ JSON.stringify(data))
+					
+					$("#uom0").val(data.item.uom.uomCode) 
+					$("#qty0").val(data.itemOpening.currentStock) 
+
+				},
+				error : function() {
+					console.log("Error");
+				}
+			});
+		}
 	</script>
 
 
@@ -475,26 +511,20 @@
 												$('#adr' + j)
 														.html(
 																"<td><input type='number' title='sno.' class='form-control form-control-sm' style='width: 70px;' name='materialRequisitionDetails[0].srNo'></td>"
-																
-																		+"<td><select class='form-control indentContainer form-control-sm select' id='orderIndentNumberPo' name='materialRequisitionDetails[0].item' title='item' onchange='getOrderIndentDetailPo()' required><option value=''>Select Indent</option><option th:each='po :  ${listPO}' th:text='${po.poNumber}' th:value=' ${po.poNumber}'></option></select></td>"
+
+																		+ "<td><select class='form-control indentContainer form-control-sm select' id='orderIndentNumberPo' name='materialRequisitionDetails[0].item' title='item' onchange='getOrderIndentDetailPo()' required><option value=''>Select Indent</option><option th:each='po :  ${listPO}' th:text='${po.poNumber}' th:value=' ${po.poNumber}'></option></select></td>"
 
 																		+ "<td><input type='text' class='form-control form-control-sm' style='width: 170px;' id='orderItemDescription' <td>"
-																		
-																	
 
 																		+ "<td><input type='text' class='form-control form-control-sm' id='orderIndentDatePo' title='item name' name='mrnInspectionItems[0].item'> </td>" // Item Code
 
-																		+ "<td><input type='number' title='qty' class='form-control form-control-sm' style='width: 70px;' name='materialRequisitionDetails[0].qty'></td>"  // Description
+																		+ "<td><input type='number' title='qty' class='form-control form-control-sm' style='width: 70px;' name='materialRequisitionDetails[0].qty'></td>" // Description
 
 																		+ "<td><input type='number' class='form-control form-control-sm' title='net qty'name='materialRequisitionDetails[0].netQty'></td>" // Item Received
 
 																		+ "<td><input type='text' class='form-control form-control-sm' id='technicalQualification' title='srNoClaimUnder' name='materialRequisitionDetails[0].srNoClaimUnder'></td>" // UOM
 
 																		+ "<td><input type='date' class='form-control form-control-sm' id='orderItemuom' title='' style='width: 150px' name='materialRequisitionDetails[0].srNoSendForRep'></td>" //  Mrn Qty
-
-																		
-
-																	
 
 														);
 												$('#example').append(
