--- a/src/main/resources/templates/layouts/editview/editMrnInspection.html
+++ b/src/main/resources/templates/layouts/editview/editMrnInspection.html
@@ -291,7 +291,8 @@ iframe {
 																</thead>
 
 																<tbody>
-																	<tr id="adr0">
+																	<tr id="adr0"
+																		th:each="row, stat :${inspection.mrnInspectionItems}">
 
 
 																		<!-- Rep Out No -->
@@ -315,21 +316,30 @@ iframe {
 
 
 																		<!-- item code -->
-																		<td><input type="text"
+																		<td><input type="hidden"
+																			th:field="*{mrnInspectionItems[__${stat.index}__].inspItemNo}">
+
+																			<input type="text"
 																			class="form-control form-control-sm" id="itemCode0"
-																			title="order date" name="mrnDetails[0].item" readonly></td>
+																			title="order date" readonly></td>
 
 																		<!-- item name -->
-																		<td><select type="text"
+																		<td><select
 																			class="form-control  form-control-sm select itemContainer0"
-																			id="item0" title="item name" onchange="getItemInfo()"></select></td>
+																			th:field="*{mrnInspectionItems[__${stat.index}__].item}"
+																			id="item0" title="item name" onchange="getItemInfo()" readonly>
+																				<option th:each="item :  ${itemList}"
+																					th:text="${item.description}"
+																					th:value=" ${item.itemCode}"></option>
+																		</select></td>
 
 																		<!-- Item Received -->
 																		<td><input type="number" title="uom"
 																			class="form-control form-control-sm"
-																			id="mrnReceived0"onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
-																			name="mrnInspectionItems[0].itemRec1" step='0.01'
-																			readonly></td>
+																			id="mrnReceived0"
+																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
+																			th:field="*{mrnInspectionItems[__${stat.index}__].itemRec1}"
+																			step='0.01' readonly></td>
 
 																		<!-- UOM -->
 																		<td><input type="text" id="uom0"
@@ -341,14 +351,16 @@ iframe {
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="inv qty"
 																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
-																			name="mrnInspectionItems[0].qtyUd" step='0.01' value='0.00'></td>
+																			th:field="*{mrnInspectionItems[__${stat.index}__].qtyUd}"
+																			step='0.01' value='0.00'></td>
 
 																		<!-- Mrn rate -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="orderItemuom" title="rec qty"
 																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
-																			name="mrnInspectionItems[0].mrnRate" step='0.01' value='0.00'></td>
+																			th:field="*{mrnInspectionItems[__${stat.index}__].mrnRate}"
+																			step='0.01' value='0.00'></td>
 
 
 
@@ -357,13 +369,14 @@ iframe {
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="po rate curr"
 																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
-																			name="mrnInspectionItems[0].qtyAcceptDev" step='0.01' value='0.00'></td>
+																			th:field="*{mrnInspectionItems[__${stat.index}__].qtyAcceptDev}"
+																			step='0.01' value='0.00'></td>
 
 																		<!-- RAte of der Qty  -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="po rate"
-																			name="mrnInspectionItems[0].qtyAcceptDevRate"
+																			th:field="*{mrnInspectionItems[__${stat.index}__].qtyAcceptDevRate}"
 																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
 																			step='0.01' value='0.00'></td>
 
@@ -372,27 +385,29 @@ iframe {
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="bill rate"
 																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
-																			name="mrnInspectionItems[0].qtyRejected" step='0.01' value='0.00'></td>
+																			th:field="*{mrnInspectionItems[__${stat.index}__].qtyRejected}"
+																			step='0.01' value='0.00'></td>
 
 																		<!-- Inspection Qty -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="total cost"
-																			
-																			name="mrnInspectionItems[0].inspectedQty" step='0.01' value='0.00'></td>
+																			th:field="*{mrnInspectionItems[__${stat.index}__].inspectedQty}"
+																			step='0.01' value='0.00'></td>
 
 																		<!-- pending qty -->
 																		<td><input type="number"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="net cost"
-																			name="mrnInspectionItems[0].qtyPending" step='0.01'value='0.00'></td>
+																			th:field="*{mrnInspectionItems[__${stat.index}__].qtyPending}"
+																			step='0.01' value='0.00'></td>
 
 
 																		<!-- inspection status -->
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo" title="dol"
-																			name="mrnInspectionItems[0].inspStatus">
+																			th:field="*{mrnInspectionItems[__${stat.index}__].inspStatus}">
 																				<option value="">Select</option>
 																				<option value="A">Accepted</option>
 																				<option value="R">Rejected</option>
@@ -438,7 +453,8 @@ iframe {
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
+													<input type="button" value="Go back!"
+														class="btn btn-danger" onclick="history.back()">
 												</div>
 											</form>
 
@@ -470,6 +486,11 @@ iframe {
 
 
 	<script>
+		window.onload = function() {
+			//getItemList();
+			getItemInfo();
+		}
+
 		function mrnInfo() {
 			var mrnNo = document.getElementById("mrnNo").value;
 			$.ajax({
@@ -649,26 +670,40 @@ iframe {
 																		+ "<td><input type='text' id='uom"+j+"' class='form-control form-control-sm' title='po qty'  readonly></td>"
 
 																		/* mrn qty */
-																		+ "<td><input type='number'class='form-control form-control-sm'id='technicalQualification' title='inv qty'name='mrnInspectionItems["+j+"].qtyUd' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
+																		+ "<td><input type='number'class='form-control form-control-sm'id='technicalQualification' title='inv qty'name='mrnInspectionItems["
+																		+ j
+																		+ "].qtyUd' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
 
 																		/* mrn rate */
-																		+ "<td><input type='number' class='form-control form-control-sm'id='orderItemuom' title='rec qty' name='mrnInspectionItems["+j+"].mrnRate' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
+																		+ "<td><input type='number' class='form-control form-control-sm'id='orderItemuom' title='rec qty' name='mrnInspectionItems["
+																		+ j
+																		+ "].mrnRate' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
 
 																		/* devitation qty */
-																		+ "<td><input type='text' class='form-control form-control-sm'id='technicalQualification' title='po rate curr'name='mrnInspectionItems["+j+"].qtyAcceptDev' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
+																		+ "<td><input type='text' class='form-control form-control-sm'id='technicalQualification' title='po rate curr'name='mrnInspectionItems["
+																		+ j
+																		+ "].qtyAcceptDev' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
 
 																		/* RAte of der Qty */
-																		+ "<td><input type='number'class='form-control form-control-sm'id='technicalQualification' title='po rate'name='mrnInspectionItems["+j+"].qtyAcceptDevRate' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
+																		+ "<td><input type='number'class='form-control form-control-sm'id='technicalQualification' title='po rate'name='mrnInspectionItems["
+																		+ j
+																		+ "].qtyAcceptDevRate' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
 
 																		/* Rejected Qty */
-																		+ "<td><input type='number' class='form-control form-control-sm' id='technicalQualification' title='bill rate' name='mrnInspectionItems["+j+"].qtyRejected' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
+																		+ "<td><input type='number' class='form-control form-control-sm' id='technicalQualification' title='bill rate' name='mrnInspectionItems["
+																		+ j
+																		+ "].qtyRejected' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
 
 																		/* Inspection Qty */
-																		+ "<td><input type='number' class='form-control form-control-sm' id='technicalQualification' title='total cost'name='mrnInspectionItems["+j+"].inspectedQty' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
+																		+ "<td><input type='number' class='form-control form-control-sm' id='technicalQualification' title='total cost'name='mrnInspectionItems["
+																		+ j
+																		+ "].inspectedQty' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
 
 																		/*  pending qty */
 
-																		+ "<td><input type='number' class='form-control form-control-sm' id='technicalQualification' title='net cost' name='mrnInspectionItems["+j+"].qtyPending' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
+																		+ "<td><input type='number' class='form-control form-control-sm' id='technicalQualification' title='net cost' name='mrnInspectionItems["
+																		+ j
+																		+ "].qtyPending' value='0.00' onchange='(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)'></td>"
 
 																		/* inspection status */
 																		+ "<td><select class='form-control indentContainer form-control-sm select' id='orderIndentNumberPo' title='dol'  name='mrnInspectionItems["+j+"].inspStatus'><option value=''>Select</option><option value='A'>Accepted</option><option value='R'>Rejected</option></select></td>"
